Update Dynamic Spacing of NavBars & Fixed Mini Bar Settings

--- a/front-end/app/src/Components/UI/AdminNav.css
+++ b/front-end/app/src/Components/UI/AdminNav.css
@@ -8,7 +8,7 @@
   z-index: 2;
   position: absolute;
   color: #f5f5f5;
-  background: rgba(4, 134, 255, 0.9);
+  background: rgb(255, 117, 4);
 }
 
 h2 {
