--- a/front-end/app/src/Components/UI/SponsorNav.css
+++ b/front-end/app/src/Components/UI/SponsorNav.css
@@ -8,7 +8,7 @@
   z-index: 2;
   position: absolute;
   color: #f5f5f5;
-  background: rgba(4, 134, 255, 0.9);
+  background: rgba(163, 4, 255, 0.9);
 }
 
 h2 {
